Update primaryColor in config.toml

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#5a89beff"
+primaryColor="#5a89be"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#20244c"
 textColor="#212121"
