--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#5a89be"
-backgroundColor="#FFFFFF"
+backgroundColor="#dadee3"
 secondaryBackgroundColor="#4b9af2"
 textColor="#212121"
 font="Sans Serif"
