Change text color to white in config.toml

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor="#5a89be"
 backgroundColor="#dadee3"
 secondaryBackgroundColor="#4b9af2"
-textColor="#212121"
+textColor="#FFFFFF"
 font="Sans Serif"
