Change secondary background color in config

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#5a89be"
 backgroundColor="#dadee3"
-secondaryBackgroundColor="#4b9af2"
+secondaryBackgroundColor="#182749"
 textColor="#FFFFFF"
 font="Sans Serif"
