Change background color in Streamlit config

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#5a89be"
-backgroundColor="#dadee3"
+backgroundColor="#889199"
 secondaryBackgroundColor="#182749"
 textColor="#FFFFFF"
 font="Sans Serif"
