--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#5a89be"
 backgroundColor="#889199"
-secondaryBackgroundColor="#182749"
+secondaryBackgroundColor="#499ad2"
 textColor="#FFFFFF"
 font="Sans Serif"
