--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,7 @@
 [theme]
 primaryColor="#5a89be"
-backgroundColor="#889199"
-secondaryBackgroundColor="#499ad2"
+backgroundColor="#499ad2"
+secondaryBackgroundColor="#121F30"
 textColor="#FFFFFF"
 font="Sans Serif"
+# 889199
