--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#5a89be"
-backgroundColor="#499ad2"
+backgroundColor="#8eb6d1"
 secondaryBackgroundColor="#121F30"
 textColor="#FFFFFF"
 font="Sans Serif"
